src/app/features/bank-select-no/bank-select.component.scss
@import '../../../styles/theme/_colors.scss';

::ng-deep .mat-input-wrapper {
  display: none !important;
}
.banks {
  max-width: 600px;
  margin: auto;
  h3 {
    text-align: center;
    margin-bottom: 20px;
  }
  .banks-inner {
    padding: 20px;
    border: 1px solid $light;
  }
}
.bank-select {
  img {
    border: 4px solid $white;
    box-sizing: border-box;
  }

  img:hover {
    border: 4px solid $primary;
    border-radius: 20px;
  }

  @media (max-width: 800px) {
    img:hover {
      border: none;
    }
  }

  .link {
    &:hover {
      a {
        border: 4px solid $primary;
        border-radius: 20px;
      }
    }

    // div {
    //   border: 2px solid $primary;
    //   height: 100px;
    //   width: 100px;
    //   border-radius: 16px;
    //   box-sizing: content-box;
    // }

    a {
      display: inline-block;
      border: 2px solid $primary;
      height: 100px;
      width: 100px;
      border-radius: 16px;
      box-sizing: border-box;

      color: $primary;
      font-size: 12px;
      letter-spacing: 0.2px;
      line-height: 15px;
      text-decoration: none;
    }
  }

  rente-button {
    min-width: 170px;
    display: inline-block;
  }

  .p {
    @media (max-width: 991px) {
      margin: 0;
      margin-bottom: 10px;
    }
  }
}

mat-selection-list {
  max-height: 600px;
  overflow: auto;
}
.bank-list {
  width: 100%;

  ::ng-deep .mat-form-field-infix {
    display: flex;
  }

  img {
    width: 4%;
  }
}
.bank-button {
  width: 100%;
  text-align: left;
  margin: 5px 0;
  font-size: 14px;
  font-weight: 400;
  padding: 0;
  border-radius: 0;
  color: #777;
}
.bank-button-logo {
  width: 40px;
  height: 40px;
  margin-right: 20px;
  padding: 0;
}

